# dispar

./: .clang-tidy  .gitignore  .gitmodules  .travis.yml  ADVANCED.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  init_repo.sh
.github/workflows/: codeql-analysis.yml  test-sanitizers.yml  test.yml
cmake/: compilation.cmake  deps.cmake  linux.cmake  mac.cmake  misc.cmake  platform.cmake  policies.cmake  target.cmake  win.cmake
lib/: CMakeLists.txt
lib/libiberty/: CMakeLists.txt  README
misc/: MacOSXBundleInfo.plist.in  install.cmake.in  sanitizer-blacklist.txt
scripts/: code_coverage.sh  cppcheck-htmlreport.py  make_release.sh  static_analysis.sh
scripts/actions/: install.sh
scripts/travis/: before_install.sh  cmake.sh  install.sh  run.sh
src/: AddrHexAsciiEncoder.cc  AddrHexAsciiEncoder.h  BinaryObject.cc  BinaryObject.h  CMakeLists.txt  CStringReader.cc  CStringReader.h  Constants.h  Context.cc  Context.h  CpuType.cc  CpuType.h  Debugger.cc  Debugger.h  Disassembler.cc  Disassembler.h  FileType.cc  FileType.h  LogHandler.cc  LogHandler.h  MacSdkVersionPatcher.cc  MacSdkVersionPatcher.h  Project.cc  Project.h  Reader.cc  Reader.h  Section.cc  Section.h  SymbolEntry.cc  SymbolEntry.h  SymbolTable.cc  SymbolTable.h  Util.cc  Util.h  Version.h  cxx.h  main.cc
src/formats/: ELF.cc  ELF.h  Format.cc  Format.h  FormatLoader.cc  FormatLoader.h  MachO.cc  MachO.h
src/widgets/: AboutDialog.cc  AboutDialog.h  AsciiValidator.cc  AsciiValidator.h  BinaryWidget.cc  BinaryWidget.h  CenterLabel.cc  CenterLabel.h  ConversionHelper.cc  ConversionHelper.h  DisassemblerDialog.cc  DisassemblerDialog.h  DisassemblyEditor.cc  DisassemblyEditor.h  HexEdit.cc  HexEdit.h  HexEditor.cc  HexEditor.h  LineEdit.cc  LineEdit.h  LogDialog.cc  LogDialog.h  MacSdkVersionsEditor.cc  MacSdkVersionsEditor.h  MainWindow.cc  MainWindow.h  NumberValidator.cc  NumberValidator.h  OmniSearchDialog.cc  OmniSearchDialog.h  OptionsDialog.cc  OptionsDialog.h  PersistentSplitter.cc  PersistentSplitter.h  TagItemDelegate.cc  TagItemDelegate.h  TagsEdit.cc  TagsEdit.h  ToggleBox.cc  ToggleBox.h  (+2 more)
tests/: AddrHexAsciiEncoder.cc  BinaryObject.cc  CMakeLists.txt  CStringReader.cc  CpuType.cc  Debugger.cc  Disassembler.cc  MacSdkVersionPatcher.cc  Project.cc  Reader.cc  Section.cc  SignalSpy.h  SymbolEntry.cc  SymbolTable.cc  Util.cc  Version.cc  binaries.qrc  main.cc  testutils.cc  testutils.h
tests/formats/: Format.cc  FormatLoader.cc  MachO.cc
tests/res/macho/: Makefile  func.cc  lib.cc  macho_func  macho_lib.dylib  macho_main  macho_main_32  macho_main_32_64  macho_main_objc  macho_strings  main.m  strings.cc
tests/widgets/: AsciiValidator.cc  NumberValidator.cc  ToggleBox.cc
